# asioNetworking

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: address.hpp.6DC800FEC8AF75F1.idx  address_v4.hpp.72761B8EBE7B2A42.idx  address_v4_iterator.hpp.E36AA099A7FD6278.idx  address_v4_range.hpp.B73D0008EF4BED9C.idx  address_v6.hpp.FFAFDB975BBD97BD.idx  address_v6_iterator.hpp.EBDE26A4F0B4434E.idx  address_v6_range.hpp.66C3CCC3DFA68F36.idx  allocator.hpp.6D6E012752749B90.idx  any_completion_executor.hpp.535EC04A570945F0.idx  any_completion_handler.hpp.4B72235D81008CC9.idx  any_executor.hpp.2520911C4BA8C1D7.idx  any_io_executor.hpp.B1EE156A40E9F8A9.idx  append.hpp.C450C8C18F59CD1F.idx  as_tuple.hpp.2A25AFF176A242B8.idx  asio.hpp.76E605AF6E6785EA.idx  associated_allocator.hpp.EF75DBFC68E9C49D.idx  associated_cancellation_slot.hpp.FB178FAE5911BB66.idx  associated_executor.hpp.4A9A5A7615EAD0E7.idx  associated_immediate_executor.hpp.BAE69C8F2533ACAB.idx  associator.hpp.BD6C890B8AE90291.idx  async_result.hpp.934CAB72E972B423.idx  awaitable.hpp.3548962547124FD6.idx  bad_address_cast.hpp.6A19F518F5E6902B.idx  basic_datagram_socket.hpp.67E1BB3A3314D97A.idx  basic_deadline_timer.hpp.E6A58F1412959490.idx  basic_descriptor.hpp.8F59FC981D59219B.idx  basic_endpoint.hpp.972371A43907D706.idx  basic_endpoint.hpp.AEF4EAB0E25F5D1B.idx  basic_endpoint.hpp.DAE43823E0D7BCE6.idx  basic_file.hpp.3DF1C38FD7265609.idx  basic_io_object.hpp.BEF6A0AC056E64C0.idx  basic_object_handle.hpp.408F7A7DCD56640A.idx  basic_overlapped_handle.hpp.4BF742144A9183EB.idx  basic_random_access_file.hpp.505E4BC77215FB5A.idx  basic_random_access_handle.hpp.2077DC38CA0DDAA3.idx  basic_raw_socket.hpp.F0A9234EFA6863D5.idx  basic_readable_pipe.hpp.38A6D3AF77FF2AA9.idx  basic_resolver.hpp.B14D6D966D9939AE.idx  basic_resolver_entry.hpp.2EF960D88164262D.idx  basic_resolver_iterator.hpp.535925912D57B85F.idx  (+144 more)
netClient/: CMakeLists.txt
netClient/src/: SimpleClient.cpp
netServer/: CMakeLists.txt
netServer/src/: SimpleServer.cpp
networking/: CMakeLists.txt
networking/src/: hjw_net.hpp  net_client.hpp  net_connection.hpp  net_message.hpp  net_server.hpp  net_tsQueue.hpp  net_utils.hpp  olc_net.hpp  rest_interface.hpp  rest_listener.hpp  rest_session.hpp  wss_client_interface.hpp  wss_session.hpp
src/: example.cpp
websocketClient/: CMakeLists.txt
websocketClient/src/: SimpleWSSClient.cpp
